--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/recoil": "^0.0.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "recoil": "^0.7.7",
     "typescript": "^4.9.5"
